feat: add inscricoes
